@@ -70,15 +70,15 @@ channelsnames[35]="Discovery Showcase HD";
 channels[35]="S23.5E-3-3205-5033";
 channelsnames[36]="Animal Planet";
 channels[36]="S23.5E-3-3202-6040";
-channelsnames[41]="een";
+channelsnames[41]="een OBSOLETE";
 channels[41]="S19.2E-53-1119-12801";
-channelsnames[42]="Canvas";
+channelsnames[42]="Canvas OBSOLETE";
 channels[42]="S19.2E-53-1119-12802";
-channelsnames[43]="VTM";
+channelsnames[43]="Infokanaal TVV";
 channels[43]="S19.2E-53-1119-12810";
-channelsnames[44]="VIER";
+channelsnames[44]="VIER OBSOLETE";
 channels[44]="S19.2E-53-1119-12814";
-channelsnames[45]="2BE";
+channelsnames[45]="2BE OBSOLETE";
 channels[45]="S19.2E-53-1119-12812";
 channelsnames[46]="VIJF";
 channels[46]="S23.5E-3-3222-21126";
@@ -396,7 +396,7 @@ channelsnames[267]="Sky Living";
 channels[267]="S28.2E-2-2021-6036";
 channelsnames[268]="Sky Living+1";
 channels[268]="S28.2E-2-2023-5712";
-channelsnames[269]="Sky Livingit";
+channelsnames[269]="Real Lives";
 channels[269]="S28.2E-2-2025-6030";
 channelsnames[270]="Sky Livingit+1";
 channels[270]="S28.2E-2-2031-6025";
@@ -606,84 +606,82 @@ channelsnames[450]="13th Street,13Street";
 channels[450]="S19.2E-133-1-42";
 channelsnames[451]="A&E";
 channels[451]="S19.2E-133-15-57";
-channelsnames[452]="Beate-Uhse.TV,BeateU";
-channels[452]="S19.2E-133-17-21";
-channelsnames[453]="Classica";
-channels[453]="S19.2E-133-17-24";
-channelsnames[454]="Discovery Channel,Discovery";
-channels[454]="S19.2E-133-4-14";
-channelsnames[455]="Disney Junior,DisneyJr";
-channels[455]="S19.2E-133-17-26";
-channelsnames[456]="Disney XD,DisneyXD";
-channels[456]="S19.2E-133-17-28";
-channelsnames[457]="Fox Serie,Fox";
-channels[457]="S19.2E-133-1-16";
-channelsnames[458]="Goldstar TV,Goldstar";
-channels[458]="S19.2E-133-17-518";
-channelsnames[459]="Heimatkanal,Heimat";
-channels[459]="S19.2E-133-17-22";
-channelsnames[460]="Jukebox";
-channels[460]="S19.2E-133-9-401";
-channelsnames[461]="Junior";
-channels[461]="S19.2E-133-17-19";
-channelsnames[462]="Motorvision TV,Motorvis";
-channels[462]="S19.2E-133-1-168";
-channelsnames[463]="NatGeo Wild,NG Wild";
-channels[463]="S19.2E-133-4-12";
-channelsnames[464]="National Geographic,NatGeo";
-channels[464]="S19.2E-133-4-13";
-channelsnames[465]="RTL Passion,Passion";
-channels[465]="S19.2E-133-1-29";
-channelsnames[466]="Sky Krimi,SkyKrimi";
-channels[466]="S19.2E-133-1-23";
-channelsnames[467]="Spiegel Geschichte,SpiegelG";
-channels[467]="S19.2E-133-4-52";
-channelsnames[468]="Syfy";
-channels[468]="S19.2E-133-17-36";
-channelsnames[469]="TNT Serie,TNTSerie";
-channels[469]="S19.2E-133-1-50";
-channelsnames[470]="Animax";
-channels[470]="S19.2E-53-1105-4058";
-channelsnames[471]="AXN Action,AXN";
-channels[471]="S19.2E-133-15-37";
-channelsnames[472]="Boomerang";
-channels[472]="S19.2E-133-15-56";
-channelsnames[473]="Cartoon Network (S)";
-channels[473]="S19.2E-133-15-39";
-channelsnames[474]="Eurosport 2 Int.";
-channels[474]="S19.2E-53-1119-12897";
-channelsnames[475]="Kinowelt TV,Kinowelt";
-channels[475]="S19.2E-133-15-33";
-channelsnames[476]="Romance TV,Romance";
-channels[476]="S19.2E-133-15-38";
-channelsnames[477]="SAT.1 emotions";
-channels[477]="S19.2E-1-1015-4701";
-channelsnames[478]="Sky Sport News,SportNews";
-channels[478]="S19.2E-133-3-17";
-channelsnames[479]="TNT Film (TCM),TNT Film";
-channels[479]="S19.2E-133-15-35";
-channelsnames[480]="Disney Cinemagic,DisneyCin";
-channels[480]="S19.2E-133-3-25";
-channelsnames[481]="MGM";
-channels[481]="S19.2E-133-3-515";
-channelsnames[482]="Sky Action,Action";
-channels[482]="S19.2E-133-2-9";
-channelsnames[483]="Sky Atlantic,Atlantic";
-channels[483]="S19.2E-133-17-34";
-channelsnames[484]="Sky Cinema+1,SkyCine1";
-channels[484]="S19.2E-133-2-11";
-channelsnames[485]="Sky Cinema+24,SkyCine24";
-channels[485]="S19.2E-133-2-43";
-channelsnames[486]="Sky Cinema,Cinema";
-channels[486]="S19.2E-133-2-10";
-channelsnames[487]="Sky Comedy,Comedy";
-channels[487]="S19.2E-133-2-8";
-channelsnames[488]="Sky Emotion,Emotion";
-channels[488]="S19.2E-133-2-20";
-channelsnames[489]="Sky Nostalgie,Nostalgie";
-channels[489]="S19.2E-133-3-516";
-channelsnames[490]="Sky Thrones,Thrones";
-channels[490]="S19.2E-133-3-41";
+channelsnames[452]="Classica";
+channels[452]="S19.2E-133-17-24";
+channelsnames[453]="Discovery Channel,Discovery";
+channels[453]="S19.2E-133-4-14";
+channelsnames[454]="Disney Junior,DisneyJr";
+channels[454]="S19.2E-133-17-26";
+channelsnames[455]="Disney XD,DisneyXD";
+channels[455]="S19.2E-133-17-28";
+channelsnames[456]="Fox Serie,Fox";
+channels[456]="S19.2E-133-1-16";
+channelsnames[457]="Goldstar TV,Goldstar";
+channels[457]="S19.2E-133-17-518";
+channelsnames[458]="Heimatkanal,Heimat";
+channels[458]="S19.2E-133-17-22";
+channelsnames[459]="Jukebox";
+channels[459]="S19.2E-133-9-401";
+channelsnames[460]="Junior";
+channels[460]="S19.2E-133-17-19";
+channelsnames[461]="Motorvision TV,Motorvis";
+channels[461]="S19.2E-133-1-168";
+channelsnames[462]="NatGeo Wild,NG Wild";
+channels[462]="S19.2E-133-4-12";
+channelsnames[463]="National Geographic,NatGeo";
+channels[463]="S19.2E-133-4-13";
+channelsnames[464]="RTL Passion,Passion";
+channels[464]="S19.2E-133-1-29";
+channelsnames[465]="Sky Krimi,SkyKrimi";
+channels[465]="S19.2E-133-1-23";
+channelsnames[466]="Spiegel Geschichte,SpiegelG";
+channels[466]="S19.2E-133-4-52";
+channelsnames[467]="Syfy";
+channels[467]="S19.2E-133-17-36";
+channelsnames[468]="TNT Serie,TNTSerie";
+channels[468]="S19.2E-133-1-50";
+channelsnames[469]="Animax";
+channels[469]="S19.2E-53-1105-4058";
+channelsnames[470]="AXN Action,AXN";
+channels[470]="S19.2E-133-15-37";
+channelsnames[471]="Boomerang";
+channels[471]="S19.2E-133-15-56";
+channelsnames[472]="Cartoon Network (S)";
+channels[472]="S19.2E-133-15-39";
+channelsnames[473]="Eurosport 2 OBSOLETE";
+channels[473]="S19.2E-53-1119-12897";
+channelsnames[474]="Kinowelt TV,Kinowelt";
+channels[474]="S19.2E-133-15-33";
+channelsnames[475]="Romance TV,Romance";
+channels[475]="S19.2E-133-15-38";
+channelsnames[476]="SAT.1 emotions";
+channels[476]="S19.2E-1-1015-4701";
+channelsnames[477]="Sky Sport News,SportNews";
+channels[477]="S19.2E-133-3-17";
+channelsnames[478]="TNT Film (TCM),TNT Film";
+channels[478]="S19.2E-133-15-35";
+channelsnames[479]="Disney Cinemagic,DisneyCin";
+channels[479]="S19.2E-133-3-25";
+channelsnames[480]="MGM";
+channels[480]="S19.2E-133-3-515";
+channelsnames[481]="Sky Action,Action";
+channels[481]="S19.2E-133-2-9";
+channelsnames[482]="Sky Atlantic,Atlantic";
+channels[482]="S19.2E-133-17-34";
+channelsnames[483]="Sky Cinema+1,SkyCine1";
+channels[483]="S19.2E-133-2-11";
+channelsnames[484]="Sky Cinema+24,SkyCine24";
+channels[484]="S19.2E-133-2-43";
+channelsnames[485]="Sky Cinema,Cinema";
+channels[485]="S19.2E-133-2-10";
+channelsnames[486]="Sky Comedy,Comedy";
+channels[486]="S19.2E-133-2-8";
+channelsnames[487]="Sky Emotion,Emotion";
+channels[487]="S19.2E-133-2-20";
+channelsnames[488]="Sky Nostalgie,Nostalgie";
+channels[488]="S19.2E-133-3-516";
+channelsnames[489]="Sky Thrones,Thrones";
+channels[489]="S19.2E-133-3-41";
 channelsnames[501]="ORF1";
 channels[501]="S19.2E-1-1117-13001";
 channelsnames[502]="ORF2";
@@ -1066,7 +1064,7 @@ channelsnames[823]="ESP2 NE Russian";
 channels[823]="S13.0E-318-200-13883";
 channelsnames[824]="Khabar TV";
 channels[824]="S13.0E-318-7200-7220";
-channelsnames[825]="TV9";
+channelsnames[825]="Yemen TV";
 channels[825]="S13.0E-318-15400-13505";
 channelsnames[840]="TVP1";
 channels[840]="S19.2E-1-1059-7100";
@@ -1168,7 +1166,7 @@ channelsnames[1011]="Travel Channel HD WE";
 channels[1011]="S23.5E-3-3221-5056";
 channelsnames[1012]="NGC HD";
 channels[1012]="S23.5E-3-3222-20965";
-channelsnames[1013]="Test RK";
+channelsnames[1013]="Reality Kings";
 channels[1013]="S23.5E-3-3208-7040";
 channelsnames[1014]="Nat Geo Wild HD DUT";
 channels[1014]="S23.5E-3-3226-709";
@@ -2430,33 +2428,33 @@ channelsnames[3511]="EURO D";
 channels[3511]="S42.0E-66-3-1309";
 channelsnames[3512]="TV 8 INT";
 channels[3512]="S42.0E-66-3-1318";
-channelsnames[3513]="AYAZ TV";
+channelsnames[3513]="PINAR TV";
 channels[3513]="S42.0E-66-3-1321";
-channelsnames[3514]="DUMAN TV";
+channelsnames[3514]="TEK DAMAR TV";
 channels[3514]="S42.0E-66-3-1323";
-channelsnames[3515]="SAHNE TV";
+channelsnames[3515]="ANI TV";
 channels[3515]="S42.0E-66-3-1325";
-channelsnames[3516]="POPULER TV";
+channelsnames[3516]="TOP POP TV";
 channels[3516]="S42.0E-66-3-1327";
-channelsnames[3517]="R MUSIC TV";
+channelsnames[3517]="CLUB MAX TV";
 channels[3517]="S42.0E-66-3-1329";
-channelsnames[3518]="RÜYAM TV";
+channelsnames[3518]="ÇAĞLA TV";
 channels[3518]="S42.0E-66-3-1331";
-channelsnames[3519]="PLS TV";
+channelsnames[3519]="HİT TV";
 channels[3519]="S42.0E-66-3-1333";
-channelsnames[3520]="KRM TV";
+channelsnames[3520]="RİTMİX TV";
 channels[3520]="S42.0E-66-3-1335";
 channelsnames[3521]="MÜZİK TÜRK";
 channels[3521]="S42.0E-66-3-1337";
-channelsnames[3522]="NİSA TV";
+channelsnames[3522]="GALA TV";
 channels[3522]="S42.0E-66-3-1339";
 channelsnames[3523]="DOĞU TV";
 channels[3523]="S42.0E-66-3-1341";
-channelsnames[3524]="CANO TV";
+channelsnames[3524]="CAN TV";
 channels[3524]="S42.0E-66-3-1343";
-channelsnames[3525]="FESTİVAL TV";
+channelsnames[3525]="MASTİKA TV";
 channels[3525]="S42.0E-66-3-1345";
-channelsnames[3526]="KIRMIZI GÜL";
+channelsnames[3526]="TUANA TV";
 channels[3526]="S42.0E-66-3-1351";
 channelsnames[3527]="CNN TÜRK RADYO";
 channels[3527]="S42.0E-66-3-1371";
@@ -3084,9 +3082,9 @@ channelsnames[4762]="Sat 7 Pars";
 channels[4762]="S13.0E-318-12200-7470";
 channelsnames[4763]="Velayat TV";
 channels[4763]="S13.0E-318-12200-7471";
-channelsnames[4764]="Karbala Satellite Channel";
+channelsnames[4764]="Karbala Satellite Channel OBSOLETE";
 channels[4764]="S13.0E-318-12200-7472";
-channelsnames[4765]="iTV";
+channelsnames[4765]="iTV OBSOLETE";
 channels[4765]="S13.0E-318-12200-7473";
 channelsnames[4766]="Al Maaref";
 channels[4766]="S13.0E-318-12200-7474";
@@ -3280,7 +3278,7 @@ channelsnames[6026]="XXL";
 channels[6026]="S13.0E-319-9900-468";
 channelsnames[6027]="SCT HD";
 channels[6027]="S13.0E-318-5000-10";
-channelsnames[6028]="Redlight 3D-HD";
+channelsnames[6028]="Redlight HD";
 channels[6028]="S13.0E-318-15800-16932";
 channelsnames[6029]="Daring tv! 133";
 channels[6029]="S13.0E-318-13300-4961";
@@ -3288,7 +3286,7 @@ channelsnames[6030]="EROXXX";
 channels[6030]="S23.5E-3-3212-14055";
 channelsnames[6031]="Brazzers TV";
 channels[6031]="S23.5E-3-3221-5061";
-channelsnames[6032]="Hustler HD-3D";
+channelsnames[6032]="Hustler HD";
 channels[6032]="S13.0E-318-15800-16933";
 channelsnames[6033]="Penthouse";
 channels[6033]="S23.5E-3-3222-20917";
@@ -3300,24 +3298,26 @@ channelsnames[6036]="PLAYBOY TV";
 channels[6036]="S19.2E-1-1060-30603";
 channelsnames[6037]="Brazzers TV CZ";
 channels[6037]="S23.5E-3-3221-5069";
-channelsnames[6038]="Hustler HD";
-channels[6038]="S23.5E-3-3211-20830";
-channelsnames[6039]="Hustler HD CZ";
-channels[6039]="S23.5E-3-3211-20831";
-channelsnames[6040]="Redlight 3D-HD!";
-channels[6040]="S13.0E-318-15800-16943";
-channelsnames[6041]="Hustler 3D-HD!";
-channels[6041]="S13.0E-318-15800-16944";
-channelsnames[6042]="XXL PL";
-channels[6042]="S13.0E-319-9900-469";
-channelsnames[6043]="Penthouse HD";
-channels[6043]="S23.5E-3-3236-5711";
-channelsnames[6044]="Penthouse HD1";
-channels[6044]="S23.5E-3-3236-5712";
-channelsnames[6045]="Penthouse HD2";
-channels[6045]="S23.5E-3-3236-5713";
-channelsnames[6046]="Penthouse 3D";
-channels[6046]="S23.5E-3-3204-5311";
+channelsnames[6038]="Beate-Uhse.TV,BeateU";
+channels[6038]="S19.2E-133-17-21";
+channelsnames[6039]="Hustler HD";
+channels[6039]="S23.5E-3-3211-20830";
+channelsnames[6040]="Hustler HD CZ";
+channels[6040]="S23.5E-3-3211-20831";
+channelsnames[6041]="Redlight HD!";
+channels[6041]="S13.0E-318-15800-16943";
+channelsnames[6042]="Hustler HD!";
+channels[6042]="S13.0E-318-15800-16944";
+channelsnames[6043]="XXL PL";
+channels[6043]="S13.0E-319-9900-469";
+channelsnames[6044]="Penthouse HD";
+channels[6044]="S23.5E-3-3236-5711";
+channelsnames[6045]="Penthouse HD1";
+channels[6045]="S23.5E-3-3236-5712";
+channelsnames[6046]="Penthouse HD2";
+channels[6046]="S23.5E-3-3236-5713";
+channelsnames[6047]="Penthouse 3D";
+channels[6047]="S23.5E-3-3204-5311";
 channelsnames[8001]="NPO 1";
 channels[8001]="T-8720-2214-1101";
 channelsnames[8002]="NPO 2";
@@ -3575,7 +3575,7 @@ minChan[5] = 5001;
 maxChan[5] = 5100;
 baseChn[5] = 5000;
 minChan[6] = 6001;
-maxChan[6] = 6046;
+maxChan[6] = 6047;
 baseChn[6] = 6000;
 minChan[8] = 8001;
 maxChan[8] = 8059;
@@ -3594,4 +3594,4 @@ defChan[6] = minChan[6]; protChn[6] = 1;
 defChan[7] = minChan[7]; protChn[7] = 0;
 defChan[8] = minChan[8]; protChn[8] = 0;
 defChan[9] = minChan[9]; protChn[9] = 0;
-Chan_Ver = "04/25/15 15:59:00" ;
+Chan_Ver = "06/28/15 16:44:12" ;
