@@ -123,6 +123,7 @@
 	.osdname1080{
 	color		: black;
 	font-size:51px;
+	font-weight: normal;
 	}
 
 	.osdtime576 {
@@ -763,6 +764,7 @@
 
 	div#mainmenu {
 	width		:80%;
+	height		:80%;
 	position	:absolute;
 	left		:10%;
 	top		:10%;
